--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,11 @@ dependencies:
   http: ^0.13.5
   url_launcher: ^6.0.20
   image_picker: ^1.1.2
+  dio: ^5.3.2 
+  json_annotation: ^4.8.1
+  flutter_staggered_animations: ^1.0.0
+  particles_flutter: ^0.1.2
+
   
   
   # The following adds the Cupertino Icons font to your application.
